fix(UI): fix UI of categories - fix the checkout UI - fix chatbot (not finish)